ecmascript/parser/tests/test262-error-references/fail/9fdb9877fcc446e2.js.stderr
error: Unexpected token
 --> $DIR/tests/test262-parser/fail/9fdb9877fcc446e2.js:1:7
  |
1 | if (b,...a, );
  |       ^^^

